Fix codelab logo clipping and blend into dark mode background

--- a/src/app/containers/quiz/quiz-header/quiz-header.component.scss
+++ b/src/app/containers/quiz/quiz-header/quiz-header.component.scss
@@ -4,10 +4,18 @@ mat-card-header {
   box-shadow: none !important;
   border: none !important;
   border-radius: 0 !important;
+  overflow: visible !important;
+  min-height: 80px;
+
+  &::after {
+    content: '';
+    display: table;
+    clear: both;
+  }
 
   .header-image {
     float: left;
-    margin: -15px 0 0 15px;
+    margin: 0 0 5px 15px;
   }
 
   .header-titles {
